<resources>
    <string name="app_name" translatable="false">EhViewer</string>
    <string name="do_not_be_a_sad_pandroid" translatable="false">Do not be a\nsad pandroid</string>
    <string name="dailog_waring_title">Waring</string>
    <string name="dailog_waring_plain">本应用中内容来自互联网，部分内容可能对您的生理及心理造成难以恢复的伤害。该应用作者不会对由本应用造成的后果负责。您是否愿意继续使用该应用？</string>
    <string name="dailog_analyics_title">Usage statistics</string>
    <string name="dailog_analyics_plain">您是否愿意将使用情况发送给开发者？这对开发者维护该应用有很大帮助。在发送使用情况的同时也会发送部分设备信息（譬如设备型号、系统版本）。开发者承诺不收集任何个人身份信息数据（譬如姓名、电话号码、电邮地址）。\n\n数据收集过程采用 Google Analytics。\nGOOGLE ANALYTICS（分析）服务条款：http://www.google.com/analytics/terms/us.html\nGoogle隐私权和条款：http://www.google.com/intl/us/policies\n\n您以后可以在设置中修改选择</string>
    <string name="dailog_network_mobile_title">You are using the mobile network, it may consume a large amount of charges, whether to continue to use ?</string>
    <string name="dailog_network_none_title">Does not detect a network connection, whether to continue to use ?</string>
    <string name="exit_tip">Click again to exit</string>
    <string name="content">Content</string>
    <string name="api" translatable="false">API</string>
    <string name="lofi_resolution">Lofi resolution</string>
    <string name="hint_no_keyword">No keyword is OK</string>
    <string name="checkbox_uploader">Specify Uploader</string>
    <string name="checkbox_advance">Advanced Options</string>
    <string name="checkbox_sname">Search Gallery</string>
    <string name="checkbox_stags">Search Gallery Tags</string>
    <string name="checkbox_sdesc">Search Gallery Description</string>
    <string name="checkbox_storr">Search Torrent Filenames</string>
    <string name="checkbox_sto">Only Show Galleries With Torrents</string>
    <string name="checkbox_sdt1">Search Low-Power Tags</string>
    <string name="checkbox_sdt2">Search Downvoted Tags</string>
    <string name="checkbox_sh">Show Expunged Galleries</string>
    <string name="checkbox_sr">Minimum Rating:</string>
    <string name="use_similarity_scan">Use similarity scan</string>
    <string name="only_search_covers">Only search covers</string>
    <string name="show_expunged">Show expunged</string>
    <string name="jump_summary">Page %1$d, %2$s pages in total</string>
    <string name="jump_to">Jump to : </string>
    <string name="toast_invalid_page">Invalid page</string>
    <string name="dialog_send_crash_title">It is important</string>
    <string name="dialog_send_crash_plain">This application crashed last time. Would you mind to send logcat to the developer for a better user experience in future ? (via e-mail)</string>
    <string name="add_description">You may add some description about the crash below.</string>
    <string name="dialog_wait_send_crash_msg">Please close the dialog after sending logcat</string>
    <string name="toast_add_favourite">Add to favourite</string>
    <string name="toast_add_download">Add to download list</string>
    <string name="no_found">No hits found</string>
    <string name="none">None</string>
    <string name="quick_search_tip">Quick search can be added via search in left drawer</string>
    <string name="no_avatar">No avatar</string>
    <string name="get_avatar_error">Get avatar error</string>
    <string name="image_search">Image search</string>
    <string name="image_not_exist">Image does not exist</string>
    <string name="image_not_readable">Image is not readable</string>
    <string name="update_message">Found new version : %1$s\nSize : %2$s\n%3$s\n\nUpdate ?</string>
    <string name="checking_update">checking updating</string>
    <string name="up_to_date">Up to date</string>
    <string name="found_update">Found update</string>
    <string name="start_update">Start downloading the update</string>
    <string name="download_update">Downloading the update</string>
    <string name="update_failed">Download the update Failed</string>
    <string name="we_feel">We fell %s</string>
    <string name="more_of_uploader">More of uploader</string>
    <string name="no_more_comment">No more comments</string>
    <string name="no_comment">No comment</string>
    <string name="click_retry">Click to retry</string>
    <string name="click_first_page">Click to go to first page</string>
    <string name="legacy_pages">%d pages leaved</string>
    <string name="download_over">Download over</string>
    <string name="start_download">Start downloading</string>
    <string name="download_1">Download OK %d</string>
    <string name="download_2">Download OK %d items</string>
    <string name="download_3">Download failed %d</string>
    <string name="download_4">Download failed %d items</string>
    <string name="download_5">Download OK %1$d, Download failed %2$d</string>
    <string name="download_6">Download OK %1$d items, Download failed %2$d items</string>
    <string name="delete_item">The item will be deleted</string>
    <string name="pic_included">pictures included</string>
    <string name="notification_be_title">Reach download limit</string>
    <string name="notification_be_mesg">Error 509, please wait a few minutes</string>
    <string name="em_network_error">Network Error</string>
    <string name="em_timeout">Time out</string>
    <string name="em_response_code_error">Response code is not HTTP_OK</string>
    <string name="em_parser_error">Parser Error</string>
    <string name="em_open_input_stream_error">Open input stream error</string>
    <string name="em_read_input_stream_error">Read input stream error</string>
    <string name="em_client_protocol">Invalid request or invalid response</string>
    <string name="em_put_cache_error">Put cache error</string>
    <string name="em_url_format_error">Url format error</string>
    <string name="em_login_error">Username or password error</string>
    <string name="em_check_login_error">Get user info error</string>
    <string name="em_logout_error">Logout error</string>
    <string name="em_url_error">Url error</string>
    <string name="em_retry">Retry</string>
    <string name="em_retry_times">Retry times : %d</string>
    <string name="em_unknown_error">Unknown error</string>
    <string name="em_no_network">No network</string>
    <string name="em_can_not_reach">Your network can not reach e-hentai</string>
    <string name="em_no_network_2">No network ?</string>
    <string name="em_request_error">Request error</string>
    <string name="em_unknown_host">Hostname can not be resolved</string>
    <string name="em_unexpected_response_code">Unexpected response code : %d</string>
    <string name="em_redirection_error">Too many redirects</string>
    <string name="em_host_error">Host error</string>
    <string name="em_get_body_error">Get body error</string>
    <string name="em_invalid_request">Invalid request</string>
    <string name="em_no_sdcard">SD card is Unmounted</string>
    <string name="em_index_error">Index error</string>
    <string name="em_requst_null">Requst content is null</string>
    <string name="ga_data_error">Data Error !</string>
    <string name="gallery_tip">Long press the screen to download from the current page. If the item is being downloaded, just load current page first.</string>
    <string name="read_image_error">Read image error</string>
    <string name="not_loaded">Not loaded</string>
    <string name="loading_percent">Loading %d%%</string>
    <string name="wait_for_more">Waiting to get page information</string>
    <string name="more_settings">More settings</string>
    <string name="save_to_local_storage">Save to local storage</string>
    <string name="save_successful">Saved to %s</string>
    <string name="save_failed">Save failed</string>
    <string name="select_save_dir">Select dir to save</string>
    <string name="current_image_not_downloaded">The image is not available</string>
    <string name="share_image">Share image</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_settings">Settings</string>
    <string name="local_favorite">Local Favorite</string>
    <string name="select_item">Select item</string>
    <string name="where_to_add">Where to add ?</string>
    <string name="failed_to_add">Failed to add</string>
    <string name="display_settings_title">Display</string>
    <string name="eh_settings_title">EH</string>
    <string name="read_settings_title">Reading</string>
    <string name="page_scaling_title">Page scaling</string>
    <string name="start_position_title">Start position</string>
    <string name="gallery_show_clock_title">Show clock</string>
    <string name="gallery_show_battery_title">Show battery</string>
    <string name="custom_codec_title">Custom codec</string>
    <string name="custom_codec_summary">Custom codec may cost less memory, decode faster</string>
    <string name="clean_redundancy_title">Clean redundancy</string>
    <string name="decode_format_title">Decode format</string>
    <string name="download_settings_title">Download</string>
    <string name="download_path_title">Download path</string>
    <string name="media_scan_title">Allow media scan</string>
    <string name="media_scan_summary_on">Please keep your gallery apps away from other people</string>
    <string name="media_scan_summary_off">Most gallery apps will ignore pictures in download path</string>
    <string name="download_thread_title">Download threads</string>
    <string name="download_origin_image_title">Download original image</string>
    <string name="download_origin_image_summary">It is dangerous! You may get 509 error.</string>
    <string name="keep_download_service_title">Keep download service</string>
    <string name="keep_download_service_summary_on">Download service will be restarted when the application is killed if it is running</string>
    <string name="keep_download_service_summary_off">Download service will not be restarted when the application is killed if it is running</string>
    <string name="advanced_settings_title">Advanced</string>
    <string name="http_advanced_settings_title">HTTP</string>
    <string name="http_warning_title">Options below will affect all HTTP connections</string>
    <string name="http_retry_title">Retry times</string>
    <string name="http_connect_timeout_title">Connect timeout (ms)</string>
    <string name="http_read_timeout_title">Read timeout (ms)</string>
    <string name="eh_advanced_settings_title">EH</string>
    <string name="eh_min_interval_title">The minimum connection interval of EH site (ms)</string>
    <string name="about_settings_title">About</string>
    <string name="author_title">Author</string>
    <string name="author_summary" translatable="false">Hippo &lt;ehviewersu@gmail.com&gt;</string>
    <string name="changelog_title">Changelog</string>
    <string name="thanks_title">Thanks</string>
    <string name="update_about_settings_title">Update</string>
    <string name="check_for_update_title">Check for update</string>
    <string name="check_for_update_summary">Tap to check for update</string>
    <string name="update_server_title">Update server</string>
    <string name="doujinshi" translatable="false">DOUJINSHI</string>
    <string name="manga" translatable="false">MANGA</string>
    <string name="artist_cg" translatable="false">ARTIST CG</string>
    <string name="game_cg" translatable="false">GAME CG</string>
    <string name="western" translatable="false">WESTERN</string>
    <string name="non_h" translatable="false">NON-H</string>
    <string name="image_set" translatable="false">IMAGE SET</string>
    <string name="cosplay" translatable="false">COSPLAY</string>
    <string name="asian_porn" translatable="false">ASIAN PORN</string>
    <string name="misc" translatable="false">MISC</string>
    <string name="info">Info</string>
    <string name="reply">Reply</string>
    <string name="jump">Jump</string>
    <string name="favourite">Favourite</string>
    <string name="download">Download</string>
</resources>