<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2014 Hippo Seven

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
 -->
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android" >

    <Preference
        android:key="download_path"
        android:title="@string/download_path_title" />

    <CheckBoxPreference
        android:key="media_scan"
        android:title="@string/media_scan_title"
        android:summaryOn="@string/media_scan_summary_on"
        android:summaryOff="@string/media_scan_summary_off"
        android:defaultValue="false" />

    <com.hippo.ehviewer.preference.EditTextPreference
        xmlns:auto="http://schemas.android.com/apk/res-auto"
        android:key="download_thread"
        android:title="@string/download_thread_title"
        android:inputType="number"
        android:numeric="integer"
        android:defaultValue="3"
        auto:etpMin="1"
        auto:etpMax="10" />

    <CheckBoxPreference
        android:key="download_origin_image"
        android:title="@string/download_origin_image_title"
        android:summary="@string/download_origin_image_summary"
        android:defaultValue="false" />

    <CheckBoxPreference
        android:key="keep_download_service"
        android:title="@string/keep_download_service_title"
        android:summaryOn="@string/keep_download_service_summary_on"
        android:summaryOff="@string/keep_download_service_summary_off"
        android:defaultValue="true" />

</PreferenceScreen>