<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2014 Hippo Seven

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
 -->
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory
        android:title="@string/http_advanced_settings_title">

        <Preference
            android:key="http_warning"
            android:title="@string/http_warning_title"
            android:selectable="false" />

        <com.hippo.ehviewer.preference.EditTextPreference
            android:key="http_retry"
            android:title="@string/http_retry_title"
            android:inputType="number"
            android:numeric="integer"
            android:defaultValue="3" />

        <com.hippo.ehviewer.preference.EditTextPreference
            android:key="http_connect_timeout"
            android:title="@string/http_connect_timeout_title"
            android:inputType="number"
            android:numeric="integer"
            android:defaultValue="5000" />

        <com.hippo.ehviewer.preference.EditTextPreference
            android:key="http_read_timeout"
            android:title="@string/http_read_timeout_title"
            android:inputType="number"
            android:numeric="integer"
            android:defaultValue="5000" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/eh_advanced_settings_title">

        <com.hippo.ehviewer.preference.EditTextPreference
            android:key="eh_min_interval"
            android:title="@string/eh_min_interval_title"
            android:inputType="number"
            android:numeric="integer"
            android:defaultValue="0" />

    </PreferenceCategory>

</PreferenceScreen>