<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="center"
    android:orientation="vertical" >

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:stretchColumns="*" >

        <TableRow android:layout_marginBottom="8dp" >

            <com.hippo.ehviewer.widget.CheckTextView
                android:id="@+id/button_doujinshi"
                android:layout_width="0.0dp"
                android:layout_marginRight="6.0dp"
                style="@style/SearchCategory"
                android:background="@color/doujinshi_bg"
                android:text="@string/doujinshi" />

            <com.hippo.ehviewer.widget.CheckTextView
                android:id="@+id/button_manga"
                android:layout_width="0.0dp"
                android:layout_marginLeft="6.0dp"
                style="@style/SearchCategory"
                android:background="@color/manga_bg"
                android:text="@string/manga" />
        </TableRow>

        <TableRow android:layout_marginBottom="8dp" >

            <com.hippo.ehviewer.widget.CheckTextView
                android:id="@+id/button_artistcg"
                android:layout_width="0.0dp"
                android:layout_marginRight="6.0dp"
                style="@style/SearchCategory"
                android:background="@color/artist_cg_bg"
                android:text="@string/artist_cg" />

            <com.hippo.ehviewer.widget.CheckTextView
                android:id="@+id/button_gamecg"
                android:layout_width="0.0dp"
                android:layout_marginLeft="6.0dp"
                style="@style/SearchCategory"
                android:background="@color/game_cg_bg"
                android:text="@string/game_cg" />
        </TableRow>

        <TableRow android:layout_marginBottom="8dp" >

            <com.hippo.ehviewer.widget.CheckTextView
                android:id="@+id/button_western"
                android:layout_width="0.0dp"
                android:layout_marginRight="6.0dp"
                style="@style/SearchCategory"
                android:background="@color/western_bg"
                android:text="@string/western" />

            <com.hippo.ehviewer.widget.CheckTextView
                android:id="@+id/button_non_h"
                android:layout_width="0.0dp"
                android:layout_marginLeft="6.0dp"
                style="@style/SearchCategory"
                android:background="@color/non_h_bg"
                android:text="@string/non_h" />
        </TableRow>

        <TableRow android:layout_marginBottom="8dp" >

            <com.hippo.ehviewer.widget.CheckTextView
                android:id="@+id/button_imageset"
                android:layout_width="0.0dp"
                android:layout_marginRight="6.0dp"
                style="@style/SearchCategory"
                android:background="@color/image_set_bg"
                android:text="@string/image_set" />

            <com.hippo.ehviewer.widget.CheckTextView
                android:id="@+id/button_cosplay"
                android:layout_width="0.0dp"
                android:layout_marginLeft="6.0dp"
                style="@style/SearchCategory"
                android:background="@color/cosplay_bg"
                android:text="@string/cosplay" />
        </TableRow>

        <TableRow android:layout_marginBottom="8dp" >

            <com.hippo.ehviewer.widget.CheckTextView
                android:id="@+id/button_asianporn"
                android:layout_width="0.0dp"
                android:layout_marginRight="6.0dp"
                style="@style/SearchCategory"
                android:background="@color/asian_porn_bg"
                android:text="@string/asian_porn" />

            <com.hippo.ehviewer.widget.CheckTextView
                android:id="@+id/button_misc"
                android:layout_width="0.0dp"
                android:layout_marginLeft="6.0dp"
                style="@style/SearchCategory"
                android:background="@color/misc_bg"
                android:text="@string/misc" />
        </TableRow>
    </TableLayout>
    
    <CheckBox
        android:id="@+id/checkbox_uploader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:layout_marginLeft="16dp"
        android:text="@string/checkbox_uploader" />
    
    <com.hippo.ehviewer.widget.PrefixEditText
        android:id="@+id/search_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:ems="10"
        android:hint="@string/hint_no_keyword"
        android:singleLine="true" >
    </com.hippo.ehviewer.widget.PrefixEditText>

    <CheckBox
        android:id="@+id/checkbox_advance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginBottom="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/checkbox_advance" />

    <TableLayout
        android:id="@+id/filter_advance"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:visibility="gone" >

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <CheckBox
                android:id="@+id/checkbox_sname"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:checked="true"
                android:text="@string/checkbox_sname" />

            <CheckBox
                android:id="@+id/checkbox_stags"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:checked="true"
                android:text="@string/checkbox_stags" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <CheckBox
                android:id="@+id/checkbox_sdesc"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/checkbox_sdesc" />

            <CheckBox
                android:id="@+id/checkbox_storr"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/checkbox_storr" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <CheckBox
                android:id="@+id/checkbox_sto"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/checkbox_sto" />

            <CheckBox
                android:id="@+id/checkbox_sdt1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/checkbox_sdt1" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <CheckBox
                android:id="@+id/checkbox_sdt2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/checkbox_sdt2" />

            <CheckBox
                android:id="@+id/checkbox_sh"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/checkbox_sh" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <CheckBox
                android:id="@+id/checkbox_sr"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/checkbox_sr" />

            <Spinner
                android:id="@+id/spinner_min_rating"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:entries="@array/min_rating" >
            </Spinner>
        </TableRow>
    </TableLayout>

</LinearLayout>